# scope-object-tracking

./: README.md  pyproject.toml  requirements.txt
src/scope_object_tracking/: __init__.py  pipeline.py  tracker.py
