[project]
name = "scope-object-tracking"
version = "0.1.0"
description = "Simple object tracking plugin for Daydream Scope"
license = "MIT"
requires-python = ">=3.10"

[project.entry-points."scope"]
scope_object_tracking = "scope_object_tracking"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_object_tracking"]
